<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdaugaFilm">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_titlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="42dp"
        android:text="@string/titlu_filme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BlackText"/>

    <TextView
        android:id="@+id/tv_nume_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/titlu_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BlackText"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_an_aparitie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/an_aparitie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nume_film"
        style="@style/BlackText"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/tv_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nume_film"
        style="@style/BlackText"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/buton_adauga_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="146dp"
        android:text="@string/btn_adauga_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_rating"
        style="@style/Buton"/>

    <EditText
        android:id="@+id/et_numefilm"
        android:layout_width="209dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintStart_toEndOf="@+id/tv_nume_film"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlu" />

    <EditText
        android:id="@+id/et_anfilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/tv_an_aparitie"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlu" />

    <EditText
        android:id="@+id/et_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/et_anfilm" />

    <CheckBox
        android:id="@+id/cb_vazut"
        style="@style/Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="84dp"
        android:text="@string/cv_vazut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <CheckBox
        android:id="@+id/cb_preferat"
        style="@style/Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/cb_preferat"
        app:layout_constraintStart_toEndOf="@+id/cb_vazut"
        app:layout_constraintTop_toBottomOf="@+id/et_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>