<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_titlu_creare_utilizator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:text="@string/titlu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BlackText"/>

    <TextView
        android:id="@+id/tv_nume_utilizator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/nume_utilizator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BlackText"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/tv_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/parola"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nume_utilizator"
        style="@style/BlackText"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/tv_data_nastere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/data_nastere"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_parola"
        style="@style/BlackText"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/et_nume"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_nume_utilizator"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlu_creare_utilizator" />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="168dp"
        android:layout_height="68dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"

        app:layout_constraintStart_toEndOf="@+id/tv_parola"
        app:layout_constraintTop_toBottomOf="@+id/et_nume" />


    <DatePicker
        android:id="@+id/et_data_nastere"
        android:layout_width="405dp"
        android:layout_height="276dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:datePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_nastere" />

    <Button
        android:id="@+id/btn_creaza_utilizator"
        style="@style/Buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="28dp"
        android:text="@string/creaza_utilizator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_data_nastere" />

</androidx.constraintlayout.widget.ConstraintLayout>