<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_nume_aplicatie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nume_aplicatie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        style="@style/BlackText"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/film"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/buton_login"
        android:layout_width="383dp"
        android:layout_height="37dp"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nume_aplicatie"
        style="@style/Buton"/>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="374dp"
        android:layout_height="41dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="20dp"
        android:text="@string/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nume_aplicatie"
        style="@style/Buton"/>


</androidx.constraintlayout.widget.ConstraintLayout>